Added GameMode, GameInstance and Respawning Ball

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Main_Level.Main_Level
 EditorStartupMap=/Game/Maps/Main_Level.Main_Level
+GameInstanceClass=/Game/Blueprints/BP_GI_Block.BP_GI_Block_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_GM_Block.BP_GM_Block_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
